--- a/index.html
+++ b/index.html
@@ -1,70 +1,1 @@
-<!--
-Template: saurabh.github.io
-Instructions to deploy:
-1. On GitHub create a new repository named exactly: saurabh.github.io
-2. Add this file as index.html at the repository root and push to the `main` branch.
-3. On GitHub, go to Settings → Pages and ensure the site is published from branch `main` and folder `/ (root)`.
-4. Your site will be available at https://saurabh.github.io within a minute or two.
-
-
-How to customize quickly:
-- Replace the placeholder text (NAME, BIO, PROJECTS, BLOG) inside the HTML where marked.
-- To add more blog posts: edit the `posts` JavaScript array near the bottom or create separate markdown files and update the template to fetch them.
-- To add resume: put resume.pdf in repo root and change the Resume link.
-
-
-This is a single-file, mobile-friendly, modern static site. Copy-paste it directly as index.html.
--->
-
-
-<!doctype html>
-<html lang="en">
-<head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Saurabh Sharma — Software Engineer</title>
-<meta name="description" content="Saurabh Sharma — Software engineer specialising in Virtualization, Telco-cloud, and distributed systems." />
-<link rel="icon" href="data:;base64,iVBORw0KGgo=" />
-<style>
-/* Minimal modern styles */
-:root{--bg:#0f1724;--card:#0b1220;--muted:#94a3b8;--accent:#7c3aed;--glass: rgba(255,255,255,0.04)}
-*{box-sizing:border-box}
-body{font-family:Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; margin:0; background:linear-gradient(180deg,#081025 0%, #071224 60%); color:#e6eef8; -webkit-font-smoothing:antialiased}
-.container{max-width:980px;margin:40px auto;padding:24px}
-.card{background:var(--card);padding:20px;border-radius:14px;box-shadow:0 6px 30px rgba(2,6,23,0.6);}
-header{display:flex;gap:20px;align-items:center}
-.avatar{width:96px;height:96px;border-radius:14px;background:linear-gradient(135deg,var(--accent),#2dd4bf);display:flex;align-items:center;justify-content:center;font-weight:700;color:#081024;font-size:28px}
-h1{margin:0;font-size:22px}
-p.lead{color:var(--muted);margin:8px 0 0}
-.meta{margin-top:16px;display:flex;gap:8px;flex-wrap:wrap}
-.btn{display:inline-block;padding:8px 12px;border-radius:10px;background:var(--accent);color:white;text-decoration:none;font-weight:600}
-nav{margin-top:20px;display:flex;gap:12px}
-section{margin-top:22px}
-.grid{display:grid;grid-template-columns:repeat(2,1fr);gap:16px}
-.full{grid-column:1/-1}
-.muted{color:var(--muted);font-size:14px}
-.project{padding:14px;background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));border-radius:10px}
-.project h3{margin:0 0 6px}
-.tags{display:flex;gap:8px;flex-wrap:wrap;margin-top:10px}
-.tag{font-size:12px;padding:6px 8px;background:var(--glass);border-radius:8px;color:var(--muted)}
-.blog-item{padding:14px;border-radius:10px;background:linear-gradient(180deg, rgba(124,58,237,0.06), transparent)}
-footer{margin-top:30px;color:var(--muted);font-size:13px;text-align:center}
-@media(max-width:760px){.grid{grid-template-columns:1fr}.avatar{width:72px;height:72px;font-size:22px}}
-</style>
-</head>
-<body>
-<div class="container">
-<div class="card">
-<header>
-<div class="avatar" aria-hidden>SS</div>
-<div style="flex:1">
-<h1 id="name">Saurabh Sharma</h1>
-<div class="muted">Senior Software Engineer — Virtualization & Telco-cloud</div>
-<p class="lead" id="short-bio">I design and troubleshoot virtual platforms, distributed systems, and telco-cloud solutions. Experienced in performance tuning, fault tolerance, and mentoring junior engineers.</p>
-<div class="meta">
-<a class="btn" id="resume-link" href="#">Download Resume</a>
-<a class="btn" href="https://www.linkedin.com" id="linkedin" style="background:#0ea5b1">LinkedIn</a>
-<a class="btn" href="mailto:your.email@example.com" id="email" style="background:#334155">Email</a>
-</div>
-</div>
-</header>
+index.html
