--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 const profile = {
 name: 'Saurabh Sharma',
 shortBio: 'Software Engineer with 14+ years experience in Virtualization, Telco-cloud, and distributed systems. Passionate about reliability and mentoring teams.',
-resume: 'resume.pdf', // place resume.pdf in repo root or change to external URL
-linkedin: 'https://www.linkedin.com/in/your-profile',
-email: 'your.email@example.com'
+resume: 'Resume_Saurabh_Sharma.pdf', // place resume.pdf in repo root or change to external URL
+linkedin: 'https://linkedin.com/in/saurabh-sharma-23453b1a',
+email: 'saurabhsvalley@gmail.com'
 };
 
 
