--- a/index.html
+++ b/index.html
@@ -1,76 +1,57 @@
-<!--
-<h3>Virtualization Performance Tuning</h3>
-<div class="muted">Reduced I/O latency by 35% on production cluster through kernel tuning and storage-layer optimizations.</div>
-<div class="tags"><span class="tag">Linux</span><span class="tag">Storage</span><span class="tag">Performance</span></div>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset='utf-8'>
+<title>Saurabh Sharma - Resume</title>
+<style>body{font-family:Arial, sans-serif;max-width:800px;margin:auto;padding:20px;line-height:1.6;} h1,h2,h3{color:#2c3e50;} .section{margin-top:20px;} .contact{margin-bottom:20px;}</style>
+</head>
+<body>
+<h1>Saurabh Sharma</h1>
+<p>+91-9731063151 |  | www.linkedin.com/in/saurabh-sharma-23453b1a</p>
+<div class='section'><h2>Profile Summary</h2>
+<p>Senior Software Engineer with 14+ years of experience in C/C++ development on Linux, specializing in virtualization, telco-cloud, and cloud networking platforms. Proven expertise in packet processing, ACLs, AAA, TLS, and firewall concepts. Hands-on with KVM, ESXi, DPDK, OVS, delivering scalable, secure, and high-performance solutions across routing platforms, SDN controllers, and virtualized routers. Recognized with multiple employee awards for innovation, quality delivery, and cross-team collaboration</p>
+</div><div class='section'><h2>Core Skills</h2>
+<p>Programming: C (expert), C++, Python (intermediate), C#
+Networking: TCP/IP stack, L2–L7 protocols, ACL, AAA, TLS, packet processing, firewall concepts
+Virtualization/Cloud: KVM, ESXi, DPDK, OVS, VMware, Containers
+Operating Systems: Linux (Ubuntu, CentOS, RHEL), Windows
+Tools: Git, JIRA, Valgrind, Coverity, Flame Graph, Meson Build
+Soft Skills: Technical leadership, mentoring, cross-team collaboration</p>
+</div><div class='section'><h2>Professional Experience</h2>
+<p>Ciena Networks | Software Engineer – 4 | Jan 2024 – Present</p>
+<p>Developed AAA authentication and NAS IP features for multi-container router platforms</p>
+<p>Optimized performance and fixed memory leaks using Valgrind and Flame Graph</p>
+<p>Refactored event-handling logic, cutting memory footprint by 5x and enhancing throughput/performance under load</p>
+<p>Impact: Reduced authentication-related issues by ~25% and improved system stability for high-performance routing platformsNokia Networks (Nuage VCS – SDN Platform) | Technical Specialist | Sept 2019 – Dec 2023</p>
+<p>Designed and delivered features like traffic mirroring and dual FIP, enhancing visibility and          multi-homing</p>
+<p>Worked on network virtualization across VMs, containers, and bare metal systems</p>
+<p>Partnered with QA, DevOps, and support to ensure on-time, high-quality releases</p>
+<p>Impact: Improved customer troubleshooting efficiency and enabled more resilient network connectivity for telco-cloud deployments</p>
+<p>Juniper Networks (Virtual MX Platform) | Software Engineer 3 | Jun 2015 – Sept 2019</p>
+<p>Built virtualized MX/PTX routers (vMX) running on KVM and ESXi, replicating real router features in cloud environments</p>
+<p>Integrated DPDK/i40e drivers for high-performance packet I/O</p>
+<p>Implemented dual RE and multi-FPC support on Ubuntu platforms</p>
+<p>Impact: Enabled Juniper’s customers to deploy routing in cloud-native environments, reducing CAPEX by eliminating hardware dependencies</p>
+<p>Samsung India (SRI-B) | Lead Engineer | Apr 2011 – May 2015</p>
+<p>Developed IPC layers for mobile platforms, improving bandwidth and stability</p>
+<p>Implemented RIL (Radio Interface Layer) enabling WiFi Calling on Windows Mobile OS</p>
+<p>Built POCs for WiFi Display (Android) and SmartStay (Windows Phone)</p>
+<p>Impact: Drove first-of-its-kind global innovation with WiFi Display, contributed to flagship features like   WiFi Calling and SmartStay that enhanced Samsung’s competitive edge.</p>
+<p>Aricent Group | Software Engineer Trainee | May 2010 – Mar 2011</p>
+<p>Contributed to 2G GSM-GPRS OMCR functions – billing, alarms, and NE management</p>
+<p>Supported build and release automation in C, C++, Perl, and Core Java</p>
+</div><div class='section'><h2>Awards & Recognition</h2>
+<p>Nokia Employee Award (2021) – Recognized for delivering critical SDN virtualization features (traffic mirroring & dual FIP) ahead of schedule, significantly improving customer adoption</p>
+<p>Half-Yearly Award (Samsung, 2014) – Honored for successful WiFi Calling feature delivery and outstanding onsite RIL support</p>
+<p>Spot Award (Samsung, 2013) – Awarded for delivering the SmartStay feature without SoC vendor support, ensuring a bug-free release</p>
+</div><div class='section'><h2>Education</h2>
+<p>Master of Computer Applications (MCA) – UP Tech University, Lucknow | 75%</p>
+<p>Bachelor of Computer Applications (BCA) – Agra University, Agra | 80%</p>
+</div><div class='section'><h2>Achievements & Contributions</h2>
+<p>World-first innovation: Paper presentation and POC demo of WiFi Display at Samsung, later adopted globally.</p>
+<p>Active problem solver on HackerRank & LeetCode (focus on algorithms and data structures)</p>
+<p>Consistently recognized for mentoring junior engineers and driving cross-team collaboration</p>
+<p>Delivered multiple virtualization and SDN features that directly improved customer adoption and system performance.</p>
 </div>
-
-
-<div class="project">
-<h3>Telco-Cloud Deployment</h3>
-<div class="muted">Architected containerised telco services on Kubernetes with CI/CD and blue/green rollout strategy.</div>
-<div class="tags"><span class="tag">K8s</span><span class="tag">CI/CD</span><span class="tag">Observability</span></div>
-</div>
-</div>
-</section>
-
-
-<section id="blog" class="full">
-<h2>Latest Posts</h2>
-<div id="blog-list" style="display:grid;gap:12px;margin-top:12px">
-<!-- Blog posts are injected by JavaScript -->
-</div>
-<p class="muted" style="margin-top:12px">Want me to add a full blog post here? Edit the posts array in the site source or host Markdown files and update the template to fetch them.</p>
-</section>
-
-
-<section id="contact" class="full">
-<h2>Contact</h2>
-<p class="muted">Interested in collaboration, contracting, or hiring? Reach out at <a id="contact-email" href="mailto:your.email@example.com">your.email@example.com</a>.</p>
-</section>
-
-
-<footer>
-<div class="muted">Made with care • GitHub Pages • Update this site by editing index.html</div>
-</footer>
-</div>
-</div>
-
-
-<script>
-// --- Customize these fields ---
-const profile = {
-name: 'Saurabh Sharma',
-shortBio: 'Software Engineer with 14+ years experience in Virtualization, Telco-cloud, and distributed systems. Passionate about reliability and mentoring teams.',
-resume: 'Resume_Saurabh_Sharma.pdf', // place resume.pdf in repo root or change to external URL
-linkedin: 'https://linkedin.com/in/saurabh-sharma-23453b1a',
-email: 'saurabhsvalley@gmail.com'
-};
-
-
-// Sample blog posts: Order newest first. Edit or replace with your own.
-const posts = [
-{id: 'fault-tolerance-simplified', title: 'Fault Tolerance in Distributed Systems — Simplified', date: '2025-01-15', excerpt: 'A practical guide to designing distributed systems that survive node failures and network partitions.', url: '#'},
-{id: 'telco-cloud-best-practices', title: 'Telco-Cloud: Practical Best Practices', date: '2024-10-02', excerpt: 'Tips and patterns for deploying telco workloads on Kubernetes at scale.', url: '#'}
-];
-
-
-// --- Render profile ---
-document.getElementById('name').textContent = profile.name;
-document.getElementById('short-bio').textContent = profile.shortBio;
-document.getElementById('resume-link').href = profile.resume;
-document.getElementById('linkedin').href = profile.linkedin;
-document.getElementById('email').href = 'mailto:' + profile.email;
-document.getElementById('contact-email').href = 'mailto:' + profile.email;
-
-
-// --- Render blog list ---
-const blogList = document.getElementById('blog-list');
-posts.forEach(p => {
-const el = document.createElement('div');
-el.className = 'blog-item';
-el.innerHTML = `<strong style="display:block">${p.title}</strong><div class="muted" style="margin-top:6px">${p.date} • ${p.excerpt}</div><div style="margin-top:8px"><a class="btn" href="${p.url}">Read</a></div>`;
-blogList.appendChild(el);
-});
-</script>
 </body>
 </html>
