--- a/index.html
+++ b/index.html
@@ -3,22 +3,33 @@
 <head>
 <meta charset='utf-8'>
 <title>Saurabh Sharma - Resume</title>
-<style>body{font-family:Arial, sans-serif;max-width:800px;margin:auto;padding:20px;line-height:1.6;} h1,h2,h3{color:#2c3e50;} .section{margin-top:20px;} .contact{margin-bottom:20px;}</style>
+<style>
+  body {font-family: Arial, sans-serif; max-width: 900px; margin: auto; padding: 20px; line-height: 1.6; background:#f9f9f9; color:#222;}
+  h1 {color: #2c3e50; border-bottom: 3px solid #7c3aed; padding-bottom: 5px;}
+  h2 {color: #7c3aed; margin-top:30px; border-bottom:1px solid #ccc; padding-bottom:4px;}
+  h3 {color: #2c3e50; margin-top:15px;}
+  p {margin: 4px 0;}
+  .contact {font-weight: bold; margin-bottom:20px;}
+  ul {margin-top:0; padding-left:20px;}
+  .section {margin-bottom:25px;}
+</style>
 </head>
 <body>
-<h1>Saurabh Sharma</h1>
+<p>Saurabh Sharma</p>
 <p>+91-9731063151 |  | www.linkedin.com/in/saurabh-sharma-23453b1a</p>
 <div class='section'><h2>Profile Summary</h2>
 <p>Senior Software Engineer with 14+ years of experience in C/C++ development on Linux, specializing in virtualization, telco-cloud, and cloud networking platforms. Proven expertise in packet processing, ACLs, AAA, TLS, and firewall concepts. Hands-on with KVM, ESXi, DPDK, OVS, delivering scalable, secure, and high-performance solutions across routing platforms, SDN controllers, and virtualized routers. Recognized with multiple employee awards for innovation, quality delivery, and cross-team collaboration</p>
-</div><div class='section'><h2>Core Skills</h2>
+</div>
+<div class='section'><h2>Core Skills</h2>
 <p>Programming: C (expert), C++, Python (intermediate), C#
 Networking: TCP/IP stack, L2–L7 protocols, ACL, AAA, TLS, packet processing, firewall concepts
 Virtualization/Cloud: KVM, ESXi, DPDK, OVS, VMware, Containers
 Operating Systems: Linux (Ubuntu, CentOS, RHEL), Windows
 Tools: Git, JIRA, Valgrind, Coverity, Flame Graph, Meson Build
 Soft Skills: Technical leadership, mentoring, cross-team collaboration</p>
-</div><div class='section'><h2>Professional Experience</h2>
-<p>Ciena Networks | Software Engineer – 4 | Jan 2024 – Present</p>
+</div>
+<div class='section'><h2>Professional Experience</h2>
+<h3>Ciena Networks | Software Engineer – 4 | Jan 2024 – Present</h3>
 <p>Developed AAA authentication and NAS IP features for multi-container router platforms</p>
 <p>Optimized performance and fixed memory leaks using Valgrind and Flame Graph</p>
 <p>Refactored event-handling logic, cutting memory footprint by 5x and enhancing throughput/performance under load</p>
@@ -27,27 +38,30 @@ Soft Skills: Technical leadership, mentoring, cross-team collaboration</p>
 <p>Worked on network virtualization across VMs, containers, and bare metal systems</p>
 <p>Partnered with QA, DevOps, and support to ensure on-time, high-quality releases</p>
 <p>Impact: Improved customer troubleshooting efficiency and enabled more resilient network connectivity for telco-cloud deployments</p>
-<p>Juniper Networks (Virtual MX Platform) | Software Engineer 3 | Jun 2015 – Sept 2019</p>
+<h3>Juniper Networks (Virtual MX Platform) | Software Engineer 3 | Jun 2015 – Sept 2019</h3>
 <p>Built virtualized MX/PTX routers (vMX) running on KVM and ESXi, replicating real router features in cloud environments</p>
 <p>Integrated DPDK/i40e drivers for high-performance packet I/O</p>
 <p>Implemented dual RE and multi-FPC support on Ubuntu platforms</p>
 <p>Impact: Enabled Juniper’s customers to deploy routing in cloud-native environments, reducing CAPEX by eliminating hardware dependencies</p>
-<p>Samsung India (SRI-B) | Lead Engineer | Apr 2011 – May 2015</p>
+<h3>Samsung India (SRI-B) | Lead Engineer | Apr 2011 – May 2015</h3>
 <p>Developed IPC layers for mobile platforms, improving bandwidth and stability</p>
 <p>Implemented RIL (Radio Interface Layer) enabling WiFi Calling on Windows Mobile OS</p>
 <p>Built POCs for WiFi Display (Android) and SmartStay (Windows Phone)</p>
 <p>Impact: Drove first-of-its-kind global innovation with WiFi Display, contributed to flagship features like   WiFi Calling and SmartStay that enhanced Samsung’s competitive edge.</p>
-<p>Aricent Group | Software Engineer Trainee | May 2010 – Mar 2011</p>
+<h3>Aricent Group | Software Engineer Trainee | May 2010 – Mar 2011</h3>
 <p>Contributed to 2G GSM-GPRS OMCR functions – billing, alarms, and NE management</p>
 <p>Supported build and release automation in C, C++, Perl, and Core Java</p>
-</div><div class='section'><h2>Awards & Recognition</h2>
-<p>Nokia Employee Award (2021) – Recognized for delivering critical SDN virtualization features (traffic mirroring & dual FIP) ahead of schedule, significantly improving customer adoption</p>
+</div>
+<div class='section'><h2>Awards & Recognition</h2>
+<h3>Nokia Employee Award (2021) – Recognized for delivering critical SDN virtualization features (traffic mirroring & dual FIP) ahead of schedule, significantly improving customer adoption</h3>
 <p>Half-Yearly Award (Samsung, 2014) – Honored for successful WiFi Calling feature delivery and outstanding onsite RIL support</p>
 <p>Spot Award (Samsung, 2013) – Awarded for delivering the SmartStay feature without SoC vendor support, ensuring a bug-free release</p>
-</div><div class='section'><h2>Education</h2>
+</div>
+<div class='section'><h2>Education</h2>
 <p>Master of Computer Applications (MCA) – UP Tech University, Lucknow | 75%</p>
 <p>Bachelor of Computer Applications (BCA) – Agra University, Agra | 80%</p>
-</div><div class='section'><h2>Achievements & Contributions</h2>
+</div>
+<div class='section'><h2>Achievements & Contributions</h2>
 <p>World-first innovation: Paper presentation and POC demo of WiFi Display at Samsung, later adopted globally.</p>
 <p>Active problem solver on HackerRank & LeetCode (focus on algorithms and data structures)</p>
 <p>Consistently recognized for mentoring junior engineers and driving cross-team collaboration</p>
