--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@ Soft Skills: Technical leadership, mentoring, cross-team collaboration</p>
 <p>Supported build and release automation in C, C++, Perl, and Core Java</p>
 </div>
 <div class='section'><h2>Awards & Recognition</h2>
-<h3>Nokia Employee Award (2021) – Recognized for delivering critical SDN virtualization features (traffic mirroring & dual FIP) ahead of schedule, significantly improving customer adoption</h3>
-<p>Half-Yearly Award (Samsung, 2014) – Honored for successful WiFi Calling feature delivery and outstanding onsite RIL support</p>
-<p>Spot Award (Samsung, 2013) – Awarded for delivering the SmartStay feature without SoC vendor support, ensuring a bug-free release</p>
+<h1>Nokia Employee Award (2021)</h1> – Recognized for delivering critical SDN virtualization features (traffic mirroring & dual FIP) ahead of schedule, significantly improving customer adoption
+<h1>Half-Yearly Award (Samsung, 2014)</h1> – <p></p>Honored for successful WiFi Calling feature delivery and outstanding onsite RIL support</p>
+<h1>Spot Award (Samsung, 2013)</h1> – <p></p>Awarded for delivering the SmartStay feature without SoC vendor support, ensuring a bug-free release</p>
 </div>
 <div class='section'><h2>Education</h2>
 <p>Master of Computer Applications (MCA) – UP Tech University, Lucknow | 75%</p>
