--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset='utf-8'>
-<title>Saurabh Sharma - Resume</title>
+<title>Saurabh Sharma</title>
 <style>
   body {font-family: Arial, sans-serif; max-width: 900px; margin: auto; padding: 20px; line-height: 1.6; background:#f9f9f9; color:#222;}
   h1 {color: #2c3e50; border-bottom: 3px solid #7c3aed; padding-bottom: 5px;}
