--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <h2>Saurabh Sharma</h2>
-<p>+91-9731063151 |  | www.linkedin.com/in/saurabh-sharma-23453b1a</p>
+<p>+91-9731063151 | saurabhsvalley@gmail.com | www.linkedin.com/in/saurabh-sharma-23453b1a</p>
 <div class='section'><h2>Profile Summary</h2>
 <p>Senior Software Engineer with 14+ years of experience in C/C++ development on Linux, specializing in virtualization, telco-cloud, and cloud networking platforms. Proven expertise in packet processing, ACLs, AAA, TLS, and firewall concepts. Hands-on with KVM, ESXi, DPDK, OVS, delivering scalable, secure, and high-performance solutions across routing platforms, SDN controllers, and virtualized routers. Recognized with multiple employee awards for innovation, quality delivery, and cross-team collaboration</p>
 </div>
