--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   <h1>Welcome to Saurabh Sharma's Website</h1>
   <p>Select a page:</p>
   <a href="resume.html">Resume / About Me</a>
-  <a href="blog.html">Blog</a>
+  <a href="pam_blog.html">Blog</a>
 </body>
 </html>
